# rover

./: .gitattributes  Cargo.toml  MILESTONES.md  MVP.md  README.md
assets/: shader.wgsl
docs/: ENTITY.md  LIFECYCLE.md  state_plan.paint
examples/rover/: Cargo.toml  MILESTONES.md  main.rs
src/: core.rs  entity.rs  input.rs  lib.rs  main.rs  render.rs  rover.rs  shader.wgsl  world.rs
src/core/: assets.rs  camera.rs  constants.rs  continuous.rs  data_types.rs  entity.rs  geometry.rs  input.rs  instance.rs  lifecycle.rs  lights.rs  mesh.rs  prefabs.rs  world.rs
src/core/data_types/: completer.rs
src/core/entity/: object.rs  player.rs
src/core/prefabs/: systems.rs
src/core/prefabs/systems/: audio.rs  collisions.rs  dynamics.rs  metrics.rs  spawner.rs
src/core/world/: planets.rs  terrain.rs
src/entity/: ENTITY.md
src/prefabs/systems/: physics.rs
src/render/: app.rs  camera.rs  gui.rs  instance.rs  lights.rs  mesh.rs  module.rs  renderer.rs  shader.rs  textures.rs  vertex.rs
src/render/shaders/: default.wgsl  marker.wgsl  terrain.wgsl
src/render/storage/: mesh.rs
src/render/vertex/: default.rs  marker.rs  terrain.rs
tests/assets/: entity.mlx
