[package]
name = "agate_engine"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
assertables = "9.8.6"
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
env_logger = "0.11.8"
image = "0.25.9"
log = "0.4.29"
nalgebra = "0.34.1"
nalgebra-glm = "0.20.0"
pollster = "0.4.0"
rand = "0.9.2"
rayon = "1.11.0"
rodio = "0.21.1"
serde_json = "1.0.149"
static_assertions = "1.1.0"
tobj = {version = "4.0.3", features = ["log"]}
wgpu = "27.0.1"
winit = "0.30.12"

[profile.release]
debug = true

[[example]]
name = "rover"
path = "examples/rover/main.rs"
